name:                taggy
version:             0.1.0.0
synopsis:            HTML parsing à la tagsoup using attoparsec
description:         ???
homepage:            http://github.com/alpmestan/taggy
license:             BSD3
license-file:        LICENSE
author:              Alp Mestanogullari
maintainer:          alpmestan@gmail.com
copyright:           2014 Alp Mestanogullari
category:            Text
build-type:          Simple
extra-source-files:  html_files/*.html
cabal-version:       >=1.10

library
  exposed-modules:     Text.Taggy,
                       Text.Taggy.Parser,
                       Text.Taggy.Types
  other-modules:   
  build-depends:       base >=4.5 && <5,
                       text >=1 && <1.2,
                       attoparsec >=0.11 && <0.13,
                       vector,
                       tagsoup
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -O2 -fno-warn-unused-do-bind -funbox-strict-fields

executable taggy
  main-is:             taggy.hs
  hs-source-dirs:      example
  build-depends:       base >=4.5 && <5,
                       text,
                       attoparsec >=0.12,
                       taggy
  ghc-options:         -Wall -O2 -fno-warn-unused-do-bind
  default-language:    Haskell2010

benchmark taggytagsoup
  main-is:           vs-tagsoup.hs
  hs-source-dirs:    bench
  ghc-options:       -O2 -funbox-strict-fields
  type:              exitcode-stdio-1.0
  build-depends:     base >= 4 && < 5,
                     text >=1,
                     attoparsec >=0.12,
                     taggy,
                     tagsoup,
                     criterion,
                     vector
  default-language:  Haskell2010
